# kython-mcp

./: .gitignore  README.md  design.md  llm_agent_demo.py  main.py  pyproject.toml
src/kython_mcp/: __main__.py  async_subinterp_repl.py  interpreter_runner.py  llm_repl_agent.py  llm_repl_mcp_server.py  local_log.py  plan_reflect_agent.py  server.py  sessions.py  tools.py  utils.py  worker.py
src/llm_backend/: README.md  __init__.py  base.py  openai_compatible.py
