[project]
name = "kython-mcp"
version = "0.1.0"
description = "Python interpreter MCP server with process-based sessions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
kython-mcp = "kython_mcp.server:main"

[dependency-groups]
dev = [
    "ipython>=9.7.0",
]
